...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Nvn-eP-1bH" id="ImP-Qd-3J7"/>
                            <outlet property="delegate" destination="Nvn-eP-1bH" id="woz-Us-yh2"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Events" id="avj-qa-miQ">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aEd-aw-peA">
                            <connections>
                                <segue destination="Sby-Yl-231" kind="presentation" identifier="AddEventSegue" id="8h4-VI-SEE"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                                        <rect key="frame" x="0.0" y="179" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Uwh-qb-bVc" id="XxI-VZ-AZT">
                                            <frame key="frameInset" width="287" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="People" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="oIW-Cm-kEo">
                                                    <frame key="frameInset" minX="15" minY="12" width="50" height="19.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="9bi-nj-wUY" id="3rd-mz-6kb"/>
                            <outlet property="delegate" destination="9bi-nj-wUY" id="soq-wX-j2L"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Event Details" id="Ttz-0E-s1J">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="q7L-39-5nE">
                            <connections>
                                <action selector="cancelButtonPressed:" destination="9bi-nj-wUY" id="Qjt-4E-NQw"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="Ttt-kT-GGB">
...
                                <rect key="frame" x="0.0" y="163.5" width="320" height="44"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="1DT-LP-bOm" id="SFJ-gQ-zUI">
                                    <frame key="frameInset" width="287" height="43.5"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Add Person" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="HGY-bG-jEM">
                                            <frame key="frameInset" minX="15" width="270" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                            <nil key="highlightedColor"/>
                                        </label>
...
