...

    @IBAction func addPerson(sender: AnyObject) {
        let alert = UIAlertController(title: "New Person",
                                      message: "Add a new person",
                                      preferredStyle: .Alert)
        
        let saveAction = UIAlertAction(title: "Save", style: .Default, handler: {(action:UIAlertAction) -> Void in
            let textField = alert.textFields!.first
            let personName = textField?.text
            
            // create a person in the context
            let appDelegate = UIApplication.sharedApplication().delegate as! AppDelegate
            let managedContext = appDelegate.managedObjectContext
...
